--- a/pages/p5/952080.md
+++ b/pages/p5/952080.md
@@ -1,4 +1,4 @@
-### 美国总统川普将在24-36小时内决定TikTok命运(图)
+### 华为向国资求生存 千亿出售旗下品牌荣耀(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="川普 TikTok 甲骨文" src="https://img3.secretchina.com/pic/2020/9-16/p2777181a873780243-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="华为 荣耀 星盟信息" src="https://img2.secretchina.com/pic/2019/12-3/p2575031a476042906-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   据报道，川普将在今后24到36小时的时间里做出决定。（图片来源：Getty Images）
+   传有国资背景的深圳星盟信息接盘华为荣耀。（图片来源：Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,56 +21,64 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月18日讯】美国总统
+  【看中国2020年11月10日讯】（看中国记者文龙综合报导）此前
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-    川普
+   <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
+    华为
    </span>
-   (特朗普)
   </strong>
-  对中国短视频应用
+  消费者业务CEO余承东表态，要把
   <strong>
-   TikTok
+   荣耀
   </strong>
-  在美业务要么关闭要么出售给一家美国公司的期限即将到期。据报道，他将在今后24到36小时的时间里做出决定。白宫办公厅主任梅多斯星期四(9月17日)表示，他担心，TikTok与美国公司
+  （Honor）品牌排名做到中国前二，全球前四。11月10日，有国资背景的深圳
   <strong>
-   甲骨文
+   星盟信息
   </strong>
-  目前达成的安排可能无法满足川普此前设定的目标。
+  被曝接盘华为荣耀的方案浮出水面。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据CNBC星期四报道，消息人士告诉该电视台的一位财经记者，川普总统预计在今后的24到36小时内决定
-  <span href="https://www.secretchina.com/news/gb/tag/TikTok" target="_blank">
-   TikTok
+  11月10日，据《澎湃新闻》报道，
+  <span href="https://zh.wikipedia.org/zh-cn/%E5%8D%8E%E4%B8%BA" target="_blank">
+   华为
   </span>
-  在美国的命运。
+  出售
+  <span href="https://zh.wikipedia.org/zh-cn/%E8%8D%A3%E8%80%80" target="_blank">
+   荣耀
+  </span>
+  方案基本敲定，本月晚些时候将正式对外宣布。由多家渠道商组成的合伙企业将是接盘方之一，可能还有产业链企业，将会有多位华为管理层空降至新公司，华为消费者业务首席运营官万飚、荣耀总裁赵明、华为产品线副总裁方飞有很大可能出现在新公司的管理团队中。
  </p>
  <p>
+  由多家渠道商组成的合伙企业名称为深圳市
+  <span href="https://www.secretchina.com/news/gb/tag/星盟信息" target="_blank">
+   星盟信息
+  </span>
+  技术合伙企业（有限合伙）（以下称星盟信息），已经在2020年10月26日注册成立，注册资本为13.7亿元（人民币，下同）。经营项目为信息技术咨询服务、技术服务、技术开发等。
+ </p>
+ <p>
+  星盟信息共有七家股东，大股东为北京松联科技有限公司（松联科技），认缴金额5.2亿元，持股37.77%；其次为北京普天太力通信技术有限公司（普天），认缴金额5亿元，持股36.32%；
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  字节跳动公司的短视频分享平台抖音的海外版TikTok风靡全球，这款应用程序在全球被下载超过10亿次，包括包括在美国下载的1亿7千5百多万次，其中很多用户是青少年。然而，美国政府和很多政界人士对中国共产党政府可能获取美国人的数据以及向美国延伸其言论审查表示担心。
+  邮电器材集团有限公司（中邮器材）持股21.79%，认缴金额3亿元；共青城酷桂投资合伙企业（有限公司）持股2.18%，认缴金额3000万元；天音通信有限公司持股1.74%，认缴金额2400万元；深圳市鲲鹏展翼股权投资管理有限公司持股0.2%，认缴金额278万元。其中深圳市鲲鹏展翼股权投资管理有限公司担任执行事务合伙人。
  </p>
  <p>
-  川普曾在8月4日的一次白宫记者会上评论说，TikTok做得很成功，“真的是很棒的公司。但是我们不能接受任何这些公司的安全风险”。
+  普天、中邮器材等都是国资背景的手机代理商分销商。
  </p>
  <p>
-  当时，美国电脑软件巨头微软正在与TikTok洽谈收购事宜。川普对记者们说：“不管交易能不能达成，我们给他们的期限到9月15日左右，我们会看看能否达成，而且能不能有很好的安全性，意思显然是安全。微软在审批方面将会是一家好公司，包括与国防部共事，他们有高层级的审批。所以这会很好。但是也有其它公司。”
- </p>
- <p>
-  川普总统8月6日正式颁布行政命令，禁止美国个人与公司45天后与字节跳动及其子公司进行交易。川普总统又在8月14日颁发一道行政命令，要求Tiktok剥离在美资产。
+  北京普天太力通信科技有限公司官网显示，公司成立于1992年，是中国普天信息产业集团有限公司所属国有控股有限责任公司。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -85,7 +93,7 @@
   </div>
  </center>
  <p>
-  中国商务部8月末宣布最新版《中国禁止出口限制出口技术目录》，实际上是禁止出售TikTok的核心算法，为TikTok的出售交易增加了复杂性。
+  中国邮电器材集团有限公司成立于1964年，先后归属邮电部、信息产业部、中央企业工委、国务院国有资产监督管理委员会管理，2009年12月，中邮重组并入中国通用技术(集团)控股有限责任公司。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -100,11 +108,11 @@
   </div>
  </center>
  <p>
-  这个星期早些时候，TikTok拒绝了微软的收购提案，而是选择与世界第二大软件制造商
-  <span href="https://www.secretchina.com/news/gb/tag/甲骨文" target="_blank">
-   甲骨文
+  11月10日，《路透社》报道称，华为计划以1000亿元（152亿美元）的价格，将
+  <span href="https://www.secretchina.com/news/gb/tag/荣耀" target="_blank">
+   荣耀
   </span>
-  公司(Oracle Corp.)建立“可信技术合作伙伴关系”，以继续在美国运营，甲骨文将持有TikTok的少数股权。
+  品牌出售给由手机分销商神州数码和深圳政府牵头的财团。消息人士表示，美国将华为视为国安风险的看法，预料不会随着美国政府换届而有急速变化。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -119,7 +127,7 @@
   </div>
  </center>
  <p>
-  知情人士说，为了解决所有权问题，TikTok的中国母公司字节跳动计划在美国证券交易所对TikTok的全球业务进行首次公开募股(IPO)。其中两位知情人士说，甲骨文还将持有新上市公司不到20%的少数股权。他们透露，沃尔玛也将入股，不过规模尚不清楚。
+  不过，也有媒体报道称，荣耀此次的收购方为神州数码、三家国资机构，以及TCL等公司组成的小股东阵营，交易价格根据去年荣耀60亿元利润，16倍PE来定，约为1000亿人民币。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -134,7 +142,7 @@
   </div>
  </center>
  <p>
-  9月16日夜间，美国财政部就TikTok/甲骨文的投资意向书中的安全问题做出了重大修改。消息人士说，字节跳动已经完全同意这些修改，尽管还不清楚修改的具体内容。
+  据悉，华为出售荣耀原因是规避美国对华为的制裁措施，目的使得荣耀手机业务能够正常运营。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -149,7 +157,7 @@
   </div>
  </center>
  <p>
-  彭博新闻援引知情人士的消息说，甲骨文也同意财政部为了解决对该交易的国家安全担忧而做出的这些修改。知情人士说，川普在决定是否同意这个交易之际一直在与内阁成员以及他的顾问进行会面，其中包括国务卿蓬佩奥、财政部长姆努钦以及他的女婿库什纳。这些顾问据报道在这个问题上有不同的看法。
+  2019年4月2日，华为消费者业务CEO余承东在微博上发文透露目标：“华为消费者业务已经发展到一个全新的历史阶段，今年华为+荣耀很可能成为全球第一手机厂商。未来，我们必须坚定方向，撸起袖子，埋头苦干：第一，华为单品牌未来要做到全球第一。第二，荣耀品牌做到中国前二，全球前四。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -164,7 +172,7 @@
   </div>
  </center>
  <p>
-  这项让字节跳动继续作为TikTok美国业务的大股东的交易，将不符合川普此前的立场。他此前曾表示，让TikTok在美国继续运营的唯一补救办法是把公司卖给一家美国公司。
+  不过，来自美国的禁令打乱了华为的全球布局。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -179,22 +187,7 @@
   </div>
  </center>
  <p>
-  白宫办公厅主任梅多斯周四早些时候表示，他们正在审视这个交易的细节，看它是否能达到有关美国国家安全以及美国利益的门槛。他担心甲骨文与TikTok的交易可能是一种“重新包装”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  他说：“我最大的担心是，如果我们所做的只是重新包装它，而仍然保持它是一家主要由中国政府运营的公司，那将不会很好地满足总统最初设定的目标。”
+  虽然在品牌方面无法和华为相比，但荣耀也具有巨大的竞争力和品牌价值。不过，荣耀之所以崛起，与华为的支持密不可分。荣耀与华为两个品牌在芯片、算法、操作系统，甚至到通信、材料及终端应用上，都能共享华为集团的研究成果。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -213,7 +206,7 @@
   </ins>
  </center>
  <p>
-  川普星期三表示，他反对字节跳动将保留TikTok多数股权的想法。
+  在今年5月15日，美国商务部发布禁令，任何企业将含有美国技术的半导体产品给华为，必须先取得美国政府的出口许可，禁令实施前有120天的缓冲期，9月14日为缓冲期的最后一天。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -228,7 +221,7 @@
   </div>
  </center>
  <p>
-  “从字节跳动的角度来看，我们不喜欢这样，”川普说。“我是说，光是在概念上，我可以告诉你，我不喜欢那样。”
+  8月17日，禁令进一步升级，美国政府在“实体清单”上新添了38家华为子公司，扩充后的实体清单上总共有152家华为关联公司。同时宣布，无论在交易的哪一个阶段，只要有华为公司参与，那么世界上任何公司未经许可都不得出售用美国软件或设备制造的半导体。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,7 +236,7 @@
   </div>
  </center>
  <p>
-  川普曾在8月3日的一次新闻发布会上说，TikTok“将在9月15日被关闭，除非微软或其他公司能够收购它，并达成一笔合适的交易，从而让美国国库得到很多钱。”
+  华为面对此前的禁令，只要不是专门为华为设计的芯片尚能采购现货。但禁令接连升级，各企业理论上无法再向华为销售，这条路也被堵死。9月15日起，华为难以再从商业途径获得芯片。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,7 +251,7 @@
   </div>
  </center>
  <p>
-  川普星期三不再坚持TikTok达成的任何交易都要向美国国库缴纳一大笔钱的要求。他说，政府律师告诉他，政府没办法从交易中收取企业的钱。
+  华为旗下的产品，从手机、5G基站，再到服务器，甚至各种物联网设备，无不仰赖芯片。对于一家硬件为主的科技企业而言，没有芯片就没有产品，没有产品，企业也难以生存。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -273,22 +266,7 @@
   </div>
  </center>
  <p>
-  川普总统说：“如果他们愿意给政府付一大笔钱，他们得不到允许，因为没有办法做到这一点。没有合法的途径做到这一点。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  一组共和党参议员已联名致函行政当局，反对甲骨文与TikTok的合作方案，并说该方案违背了总统的行政命令。他们认为，如果拿不到核心算法，如果在数据问题上不彻底斩断跟中国共产党政府的关系，美国的安全风险问题就无法解决。
+  日前，日本科技实验室Fomalhaut Techno Solutions拆解华为5G基站中被称为基带的核心装置后发现，其仍有27.2%的组件依赖美国供应商，且主要的半导体器件是由台积电（TSMC）提供，意味着华为正使用该公司先前囤积的芯片。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -320,7 +298,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -352,13 +330,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946546.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946546.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946546.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/18/946546.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/952080.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/952080.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/952080.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/10/952080.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/946546.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/952080.md' width='0px' height='0px'/>
