--- a/indexes/nsc415.md
+++ b/indexes/nsc415.md
@@ -1,60 +1,3 @@
-#### [【珍言真语】潘小文：捕蔡玉玲 港警离谱报复](../pages/nsc415/n12537404.md) 
-#### [香港政府大埔区设流动采样亭](../pages/nsc415/n12537540.md) 
-#### [前学生动源成员陆海天被捕 涉协助钟翰林潜逃](../pages/nsc415/n12537533.md) 
-#### [中共病毒影响下 港近半“打工仔”焦虑抑郁](../pages/nsc415/n12537518.md) 
-#### [香港网媒娱宾记者提堂 团体声援](../pages/nsc415/n12537492.md) 
-#### [香港民主派指若议员被DQ将总辞](../pages/nsc415/n12537464.md) 
-#### [【役情最前线】消失近一年 彭丽媛终于露面](../pages/nsc415/n12537116.md) 
-#### [【财商天下】蚂蚁故事没结束 马云控股权藏秘密](../pages/nsc415/n12537259.md) 
-#### [【有冇搞错】川普4年政绩多 美国须正视舞弊指控](../pages/nsc415/n12536779.md) 
-#### [【珍言真语】曾志豪：香港第四权末日来到](../pages/nsc415/n12536430.md) 
-#### [大埔一周内九人确诊 流动车区内派发及收集样本瓶](../pages/nsc415/n12534913.md) 
-#### [多区悼念周梓乐逝世周年](../pages/nsc415/n12534895.md) 
-#### [香港调查指㓥房人均居住面积约40平方呎](../pages/nsc415/n12534907.md) 
-#### [香港政府明年人口普查 疫情下将设网上问卷](../pages/nsc415/n12534893.md) 
-#### [【役情最前线】川普：胜选非由媒体决定](../pages/nsc415/n12534512.md) 
-#### [网路热传民间道人解密 美大选惊动天神助川普](../pages/nsc415/n12532904.md) 
-#### [【役情最前线】电视台中断转播白宫记者会](../pages/nsc415/n12530970.md) 
-#### [【珍言真语】谢田：利益分赃不均 中共叫停蚂蚁](../pages/nsc415/n12530193.md) 
-#### [香港传媒组织谴责拘蔡玉玲](../pages/nsc415/n12528776.md) 
-#### [香港五成二受访学生压力指数偏高](../pages/nsc415/n12528754.md) 
-#### [港“国安处”开举报热线 被批文革式“笃灰热线”](../pages/nsc415/n12528747.md) 
-#### [香港新增七宗确诊 一宗死亡个案](../pages/nsc415/n12528737.md) 
-#### [【役情最前线】加拿大准备好从香港撤侨](../pages/nsc415/n12527977.md) 
-#### [【珍言真语】陶杰：美大选是南北战后最大内战](../pages/nsc415/n12527362.md) 
-#### [香港团体议员谴责警滥捕蔡玉玲](../pages/nsc415/n12526088.md) 
-#### [南丫海难律政司不再检控 涂谨申指或提私人检控](../pages/nsc415/n12526080.md) 
-#### [谭得志涉3案14罪保释拒](../pages/nsc415/n12526065.md) 
-#### [港教职员分批病毒检测 料需五十多个学校工作天](../pages/nsc415/n12526052.md) 
-#### [【役情最前线】川普称赢 吁法庭裁定结果](../pages/nsc415/n12525635.md) 
-#### [【珍言真语】记者忆采访被刺：报真相不退缩](../pages/nsc415/n12525168.md) 
-#### [铿锵集编导蔡玉玲被捕](../pages/nsc415/n12523524.md) 
-#### [香港首名因查册被捕的媒体人新闻界忧寒蝉效应](../pages/nsc415/n12523552.md) 
-#### [香港社交距离措施延长七天 再多九宗确诊个案](../pages/nsc415/n12523520.md) 
-#### [【役情最前线】最新分析：川普将获胜](../pages/nsc415/n12522817.md) 
-#### [蚂蚁暂缓上市 专家：预警股市突困失利](../pages/nsc415/n12523272.md) 
-#### [许智峯被指违特权法被捕](../pages/nsc415/n12521055.md) 
-#### [社民连及工党被控违限聚令 押后明年再审](../pages/nsc415/n12521062.md) 
-#### [香港海关破获历来最大宗冰毒案](../pages/nsc415/n12521042.md) 
-#### [香港新增六宗中共病毒确诊个案](../pages/nsc415/n12521010.md) 
-#### [国泰工会集会收反对通知书 今召开会员大会](../pages/nsc415/n12521008.md) 
-#### [港城大禁学生改校歌校徽 网友讥讽改党校吧](../pages/nsc415/n12520979.md) 
-#### [【役情最前线】“双阴证明”阻回国](../pages/nsc415/n12520314.md) 
-#### [【有冇搞错】摇摆州总动员 川普赢面大增](../pages/nsc415/n12520131.md) 
-#### [明爱遗失121名学生资料 李傲然斥监管不力](../pages/nsc415/n12518490.md) 
-#### [香港过半离校青年遇就业问题](../pages/nsc415/n12518435.md) 
-#### [香港增七宗中共病毒确诊个案](../pages/nsc415/n12518444.md) 
-#### [【役情最前线】拜登选情告急 社交媒体股价大跌](../pages/nsc415/n12518057.md) 
-#### [7名民主派被捕 中共内乱加重香港乱局](../pages/nsc415/n12518162.md) 
-#### [【珍言真语】陈日君：教宗受控 梵谛冈叩头中共](../pages/nsc415/n12517500.md) 
-#### [香港7位现任和前任民主派议员遭拘捕](../pages/nsc415/n12517503.md) 
-#### [【役情最前线】提2035远景 习近平欲长期掌权](../pages/nsc415/n12514625.md) 
-#### [【珍言真语】马仲仪：港康码将上路 免检有漏洞](../pages/nsc415/n12514422.md) 
-#### [香港申诉专员发现公屋游乐场维修延误](../pages/nsc415/n12512358.md) 
-#### [香港调查指雇员2020年平均加薪1.4%](../pages/nsc415/n12512336.md) 
-#### [香港教育局指未有计划恢复全日面授课堂](../pages/nsc415/n12512332.md) 
-#### [钟翰林被控分裂国家等四罪](../pages/nsc415/n12512300.md) 
-#### [何君尧被母校顺民意DQ会籍](../pages/nsc415/n12512301.md) 
-#### [【役情最前线】涉孙力军案 央视女主播证实出事](../pages/nsc415/n12511777.md) 
-#### [【珍言真语】桑普：阻政治庇护 港美领馆驻重兵](../pages/nsc415/n12510995.md) 
-#### [【有冇搞错】抓8名猎狐行动特工 美斩中共狼爪](../pages/nsc415/n12511407.md) 
+
+### 已转移至新页面 [港澳新闻](E港澳新闻.md) 
+
