--- a/pages/nf4514/n12538429.md
+++ b/pages/nf4514/n12538429.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.10】谷歌阻保守党派广告" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1010112582-600x400.jpg"/>
+<div><img alt="【大选更新11.10】蓬佩奥对川普连任充满信心" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/A4-117-1.jpg"/>
 <div class="caption">
- 谷歌销售主管声称谷歌会阻止保守党派和右翼团体的广告，但却给民主党免费广告。(DENIS CHARLET/AFP/Getty Images)
+ 美国国务卿蓬佩奥资料照。(Jure Makovec/AFP)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -58,6 +58,83 @@
  </ok>
  情况的实时更新：
 </h4>
+<h3>
+ 彭斯抵达共和党午餐会
+</h3>
+<p>
+ 周二，副总统迈克·彭斯（Mike Pence）前往参议院，与共和党成员一起共进午餐。
+</p>
+<p>
+ 他未对选举欺诈指控相关问题进行回应。CNN等主流媒体宣布拜登竞选成功。迄今不对选举舞弊大量事实进行报导。相反地，称没有证据证实选举舞弊的存在和发生。
+</p>
+<p>
+ 随着越来越多证据的出现，民主党被指系统性操纵
+ <ok href="https://www.epochtimes.com/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E9%80%89.html">
+  美国大选
+ </ok>
+ 。
+</p>
+<p>
+ 川普（特朗普）誓言挑战2020年选举舞弊问题。
+</p>
+<h3>
+ 参议院民主党人领导团队再次当选
+</h3>
+<p>
+ CNN报导，民主党消息人士称，查克·舒默（Chuck Schumer）和整个领导团队再次当选为参议院民主党核心小组。
+</p>
+<p>
+ 另外，舒默还任命参议员科里·布克（Cory Booker）和凯瑟琳·科尔特斯·马斯托（Catherine Cortez Masto）加入领导团队。
+</p>
+<p>
+ 下面是该领导团队全部成员组成：
+</p>
+<p>
+ 参议员查克·舒默（Chuck Schumer），少数党领袖；
+ <br/>
+ 参议员迪克·德宾（Dick Durbin），党鞭；
+ <br/>
+ 参议员帕里·默里（Parry Murray），助理少数党领袖；
+ <br/>
+ 参议员黛比·斯塔贝诺（Debbie Stabenow），民主政策与传播委员会主席；
+ <br/>
+ 参议员伊丽莎白·沃伦（Elizabeth Warren），会议副主席；
+ <br/>
+ 参议员马克·沃纳（Mark Warner），会议副主席；
+ <br/>
+ 参议员艾米·克洛布查尔（Amy Klobuchar），指导（委员会）主席；
+ <br/>
+ 参议员伯尼·桑德斯（Bernie Sanders），外联主席；
+ <br/>
+ 参议员乔·曼钦（Joe Manchin），民主党政策与传播委员会副主席；
+ <br/>
+ 参议员塔米·鲍德温（Tammy Baldwin），秘书；
+ <br/>
+ 参议员科里·布克（Cory Booker），民主政策与传播委员会副主席；
+ <br/>
+ 凯瑟琳·科尔特斯·马斯托（Catherine Cortez Masto），外联副主席。
+</p>
+<h3>
+ 麦康奈尔再次当选为共和党领袖
+</h3>
+<p>
+ 参议员米奇·麦康奈尔（Mitch McConnell）再次当选为参议院共和党领袖。
+</p>
+<p>
+ 这位现年78岁的共和党人向福克斯新闻证实了他在党内的地位。他说：“我们已经准备好出发了。”在和领导团队又赢得两年任期后，这位肯塔基州参议员发表了讲话。
+</p>
+<p>
+ 他指出：“确切地说，我们是否会成为多数党还是有些悬念，这将在1月5日的乔治亚州竞选中得到答案”。
+</p>
+<p>
+ 他指的是在乔治亚州举行的两场第二轮选举。共和党参议员凯利·洛夫勒（Kelly Loeffler）和戴维·珀杜（David Perdue）试图从中保住席位。他们的胜败有可能影响到哪一方将成为参议院多数党。
+</p>
+<p>
+ 北卡罗来纳州和阿拉斯加的两场竞选尚未举行。
+</p>
+<p>
+ 当被问及唐纳德·川普（特朗普）总统与民主党候选人乔·拜登之间的总统竞选结果时，麦康奈尔告诉记者，川普的诉讼“没有理由引发惊慌”，他也不会阻止新政府的成立——“如果有的话”。
+</p>
 <h3>
  民主党人：“我会撒谎，我会作弊，我会偷窃”
 </h3>
@@ -477,6 +554,10 @@
      <p>
       责任编辑：叶紫微#
      </p>
+     <div id="gtx-anchor" style="position: absolute; visibility: hidden; left: 10px; top: 559.812px; width: 225px; height: 19px;">
+     </div>
+     <div class="jfk-bubble gtx-bubble" style="visibility: visible; left: 108px; top: 589px; opacity: 1;">
+     </div>
     </p>
    </p>
   </p>
