--- a/pages/nsc412/n12538429.md
+++ b/pages/nsc412/n12538429.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11.10】蓬佩奥对川普连任充满信心" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/A4-117-1.jpg"/>
+<div><img alt="【大选更新11.10】川普：我们将获胜！" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/A4-117-1.jpg"/>
 <div class="caption">
  美国国务卿蓬佩奥资料照。(Jure Makovec/AFP)
 </div></div><hr/>
