--- a/pages/soh6/441670.md
+++ b/pages/soh6/441670.md
@@ -207,10 +207,7 @@
   虽然受到恐吓，霍普金斯在11月10日发布视频，表示他不会因此撤回对邮局选举舞弊的指控。
  </p>
  <h3>
-  <ok href="/term/17375">
-   密歇根州
-  </ok>
-  多位证人状告底特律市和韦恩县政府
+  密州多位证人状告底特律市和韦恩县政府
   <ok href="/term/413062">
    大选舞弊
   </ok>
