--- a/pages/soh6/441670.md
+++ b/pages/soh6/441670.md
@@ -39,6 +39,23 @@
   报导：
  </p>
  <h3>
+  拜登辩论会承诺不提前宣布胜利 结果自打耳光
+ </h3>
+ <p>
+  川普战情室发布视频，截取了2020年总统大选辩论会拜登的讲话片段。主持人当时问拜登：是否会在所有计票结束以及得到认证之前宣布获胜？他回答说：我不会。然而，11月7日，当几个州的选票还未计算完毕，法律诉讼即将展开的时候，拜登与左媒就着急地宣告拜登在大选中获胜。
+ </p>
+ <p>
+  对此川普战情室说，拜登并未得到任何州的认证，却过早地宣告胜利。他出尔反尔，说的话没有丝毫可信度。
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive" style="padding-bottom: 100%;">
+    </div>
+   </div>
+  </div>
+ </div>
+ <h3>
   欺诈阴霾笼罩美国？新泽西监票员：10箱选票被运走私自处理
  </h3>
  <p>
