--- a/pages/p1/952272.md
+++ b/pages/p1/952272.md
@@ -1,4 +1,4 @@
-### 传李嘉诚内地清盘 为“自救”再甩500亿京沪项目&nbsp;(图)
+### 梅拉尼娅劝川普认输？陆媒传播假新闻被网友直斥(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="李嘉诚 长实集团 京沪项目" src="https://img2.secretchina.com/pic/2019/10-1/p2529862a582908330-ss.jpg"/>
+  <img alt="近日，有大陆媒体转载梅拉尼娅劝川普认输的假新闻，遭大陆网民斥责。" src="https://img3.secretchina.com/pic/2020/8-28/p2764082a794507379-ss.jpg"/>
   <br>
-   传李嘉诚内地清盘，为“自救”再甩500亿京沪项目。 （图片来源：ANTHONY WALLACE/AFP/Getty Images）
+   近日，有大陆媒体转载梅拉尼娅劝川普认输的假新闻，遭大陆网民斥责。（图片来源：Drew Angerer/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,60 +21,126 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月20日讯】（看中国记者丁晓雨综合报导）继7月份出售成都南城都汇项目后，
+  【看中国2020年11月12日讯】（看中国记者端木珊综合报导）
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/李嘉诚" target="_blank">
-    李嘉诚
-   </span>
+   美国大选
   </strong>
-  的
+  选票作假持续发酵，美国
   <strong>
-   长实集团
+   左派媒体
   </strong>
-  日前传出即将清空内地资产，甩卖500亿
+  一方面营造拜登“胜选”的假象，一方面炒作
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
+  </span>
+  (特朗普)总统拒绝认输的消息，甚至制造第一夫人
   <strong>
-   京沪项目
+   梅拉尼娅
   </strong>
-  。有分析称，长实集团近年在内地经营状况不佳，出售成都及京沪物业或为“自救”之举。
+  与川普不和，劝其认输的
+  <strong>
+   假新闻
+  </strong>
+  。中共官媒则不经考证，直接转载相关假新闻，遭大陆网民斥责。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据《中国经营报》9月19日报导，近日，市场传出
-  <span href="https://www.secretchina.com/news/gb/tag/长实集团" target="_blank">
-   长实集团
+  11月9日，CNN在报道中宣称，有消息人士透露，美国第一夫人
+  <span href="https://www.secretchina.com/news/gb/tag/梅拉尼娅" target="_blank">
+   梅拉尼娅
   </span>
-  欲出售北京、上海两地项目之事，引发业界关注。有分析称，长实集团今年以来销售乏力，故以出售资产为名，吸引市场关注。
+  私下建议川普“是时候接受失败了”。由大陆官媒新华社主管的《参考消息》转载了这一消息，并在报道中贴出了CNN的报道截图。随后，凤凰网、新浪网等多家大陆媒体网站开始传播这一消息。凤凰网并在其官方微博上发表了相关帖文。
  </p>
  <p>
-  对此，长实集团企业事务部在9月17日回复媒体称，
-  <span href="https://zh.wikipedia.org/wiki/長江實業" target="_blank">
-   长实集团
+  值得注意的是，在CNN报道的前一日，梅拉尼娅刚刚在推特上发表了大选后的第一份公开声明，声明说：“美国人民应该拥有公正的选举。每一张合法的——不是非法的——选票，应该被计算在内。我们必须以完全透明的方式保护我们的民主。”
+ </p>
+ <p>
+ </p>
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="en">
+   The American people deserve fair elections. Every legal - not illegal - vote should be counted. We must protect our democracy with complete transparency.
+  </p>
+  — Melania Trump (@FLOTUS)
+  <span href="https://twitter.com/FLOTUS/status/1325509832594616328?ref_src=twsrc%5Etfw">
+   November 8, 2020
   </span>
-  项目位置优越，吸引市场注意但并不代表其需要出售相关资产。
- </p>
+ </blockquote>
  <p>
-  据财新报导称，长实集团拟出售北京市朝阳区逸翠园二期项目和上海普陀区高尚领域综合体项目，对应价值达500亿元，而融创
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  然而，大陆媒体的报道中并未提到梅拉尼娅公开声明的消息。大陆媒体如此明显的散播假新闻令“#梅拉尼娅建议特朗普接受失败#的话题很快登上了微博热搜，截至目前已有2.5亿人次阅读相关话题。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  不少网友质疑，“梅拉尼娅刚才亲自发推文表示要和特朗普一起战斗到底。CNN是从哪看到她要特朗普接受失败的？？？”“私下这CNN是怎么知道的？听墙根儿么？”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  还有网友批评大陆官媒，不经考证就直接报道，“假的新闻大哥，你看一下梅的推文好吗，她要陪着她老公告到高院去，你们咋个乱搬运左媒的不实报道哦”。“凤凰网为博眼球出假新闻不是一次两次了”。“国内的媒体就是喜欢发对川普不利的假新闻…无语了”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  更有网友在该微博下留言，支持川普说：“川普并没有失败！只要他的法律公正就能再次胜任
+  <span href="https://www.secretchina.com/news/gb/tag/总统" target="_blank">
+   总统
   </span>
-  有意接手。
- </p>
- <p>
-  上海高尚领域项目地块，位于普陀区真如城市副中心核心区域，由长实集团与和润集团于2006年取得，建筑面积约117万平方米，集酒店、办公、居住、娱乐等为一体，欲“打造大都市高尚生活样本”。
- </p>
- <p>
-  早在2019年5月，就有媒体报导称，长实集团打算出售上海高尚领域项目，价值约为200亿元人民币，但长实集团予以否认。在否认出售项目一个月后，高尚领域A4地块开盘，1108套房源中，前期收获1181组有效认筹，但据悉整体弃号率超过3成。
+  的权力。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -89,86 +155,7 @@
   </div>
  </center>
  <p>
-  相关信息显示，高尚领域A6地块房源数达到348套，但该项目在今年4月开盘时的认筹率低至3.16%，不仅如此，网上房地产数据显示，截至9月16日，该项目仍然有218套处于可售状态。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  甩卖最后资产的同时，长实集团地块开发进度缓慢，有“囤地”嫌疑的话题再次被抛上风口浪尖。在9月17日的回复中，长实集团称，“并不存在囤地之情况”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  公开资料显示，上海高尚领域项目是在2006年底，由长实集团下属公司以底价22亿元获得上海普陀区真如副中心启动区A3-A6地块。2006年拿地后，该项目直到2011年才正式启动，13年后的2019年才传出开盘消息。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  而自1989年大举进入内地以来，
-  <span href="https://zh.wikipedia.org/wiki/李嘉誠" target="_blank">
-   李嘉诚
-  </span>
-  旗下长实系地产一些项目的开发周期有的超过10年。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  《中国经营报》报导称，9月17日，长实集团企业事务部相关负责人回应该报采访时，称所有发展项目均严格按照国家法规进行，并不存在囤地之情况。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  除了高尚领域项目，公开资料显示，2004年，长实地产在公开市场通过公开拍卖拿下上海陆家嘴(12.110, 0.12, 1.00%)世纪大道2-4地块，折合楼板价为1.2万元/平方米，项目总建筑面积约36万平方米。
+  在CNN报导美国第一夫人梅拉尼娅劝川普“接受选举失败”的同时，CNN主播塔伯（Jake Tapper）发推文称，库什纳、川普的私人律师、前纽约市长鲁迪‧朱利安尼（Rudy Giuliani）以及川普竞选资深顾问米勒（Jason Miller）目前所做的只是为了“安抚总统的自负，讨好他”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -187,7 +174,7 @@
   </ins>
  </center>
  <p>
-  据悉，地块所处位置是上海多条地铁线交汇的商业据点，人流密集。2016年，建好的世纪汇广场被作价200亿元卖给人寿保险，此时距离拿下地块相隔12年。
+  对此，米勒直接转推并回复说，“这是100%的错误消息，该报导是空穴来风，梅多斯（CoS Meadows，白宫幕僚长）、大卫‧博西（David N.Bossie，竞选副经理）、库什纳、朱利安尼等和我本人都一起战斗，我们都追随川普，我们之间没有间隔。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -202,7 +189,6 @@
   </div>
  </center>
  <p>
-  2011年开发的上海嘉定核心地段楼盘湖畔天下，截至今年9月16日，仍有754套未售出，其中包括56套住宅。其中瑞林路1280弄地块，前8个月仅售出19套。此外，长江实业在上海的另一楼盘御沁园，自2012年开始销售，截至今年9月17日，仍有18套住宅未售出。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -216,27 +202,35 @@
    </center>
   </div>
  </center>
- <p>
-  对外界认为长实集团房子销售乏力的说法，长实集团回应称，不存在这种情况，滞销的主要是车位等非住宅类物业。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="en">
+   This is 100% false. There is no truth to this report whatsoever. CoS Meadows, Dave Bossie, Jared Kushner, Rudy, myself and everybody else are on the same page - we all work for
+   <span href="https://twitter.com/realDonaldTrump?ref_src=twsrc%5Etfw">
+    @realDonaldTrump
+   </span>
+   and follow his lead, and there is no daylight between us.
+   <span href="https://t.co/GAHjAs5yck">
+    https://t.co/GAHjAs5yck
+   </span>
+  </p>
+  <center>
+   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
     </div>
-   </center>
-  </div>
- </center>
- <p>
-  《中国经营报》称，长实集团此时甩卖项目，或与其上半年的业绩表现不佳有关。相关数据显示，长实集团上半年利润下降57.96%，而其在英国等的投资，因疫情冲击，亦表现不佳，此前出售成都项目套现78亿港元，及当下传闻出售
-  <span href="https://www.secretchina.com/news/gb/tag/京沪项目" target="_blank">
-   京沪项目
+   </div>
+   <div>
+    <center>
+     <div id="div-gpt-ad-1589559869784-0">
+     </div>
+    </center>
+   </div>
+  </center>
+  — Jason Miller (@JasonMillerinDC)
+  <span href="https://twitter.com/JasonMillerinDC/status/1325619167182139403?ref_src=twsrc%5Etfw">
+   November 9, 2020
   </span>
-  ，或为“自救”之举。
+ </blockquote>
+ <p>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -268,7 +262,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -300,13 +294,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946698.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946698.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946698.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/20/946698.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952272.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952272.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952272.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/12/952272.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/946698.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/952272.md' width='0px' height='0px'/>
