--- a/pages/prog202/a102984858.md
+++ b/pages/prog202/a102984858.md
@@ -1,4 +1,4 @@
-### 【环球直击】10月16日完整版（1）
+### 【全球新闻】11月11日完整版
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,32 +7,36 @@
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2020年10月16日讯】【环球直击】10月16日完整版（1）
+  【新唐人北京时间2020年11月12日讯】 【全球新闻】11月11日完整版
  </p>
  <p>
   <strong>
-   摘要
+   提要
   </strong>
   <br/>
-  <ok href="https://www.ntdtv.com/gb/成都大学.htm">
-   成都大学
+  <ok href="https://www.ntdtv.com/gb/川普.htm">
+   川普
   </ok>
-  党委书记绝笔控校长后身亡
+  纪念阵亡将士 发“退伍军人日”公告
   <br/>
-  无锡37位访民盖手印 揭“零上访”黑幕
+  <ok href="https://www.ntdtv.com/gb/川普.htm">
+   川普
+  </ok>
+  赢得
+  <ok href="https://www.ntdtv.com/gb/阿拉斯加.htm">
+   阿拉斯加
+  </ok>
+  共和党参议院再添一席
   <br/>
-  <ok href="https://www.ntdtv.com/gb/文在寅政府.htm">
-   文在寅政府
+  港府DQ4名议员
+  <ok href="https://www.ntdtv.com/gb/民主派.htm">
+   民主派
   </ok>
-  被爆：助朝鲜洗产地 违反
-  <ok href="https://www.ntdtv.com/gb/联合国制裁.htm">
-   联合国制裁
-  </ok>
+  19位议员总辞
   <br/>
-  <ok href="https://www.ntdtv.com/gb/爱荷华州选民.htm">
-   爱荷华州选民
-  </ok>
-  ：我不会向共产主义屈服
+  轻功水上漂？ 西班牙高球手展“神技”
+ </p>
+ <p>
  </p>
  <div class="single_ad">
  </div>
@@ -40,13 +44,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102964624.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102964624.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102964624.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/10/16/a102964624.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102984858.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102984858.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102984858.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/11/12/a102984858.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102964624.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102984858.md' width='0px' height='0px'/>
