--- a/pages/p8/952290.md
+++ b/pages/p8/952290.md
@@ -1,4 +1,4 @@
-### 无知者无畏(图)
+### 智者6不贪(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,17 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="无知 无畏 高斯 数学" src="https://img3.secretchina.com/pic/2020/7-12/p2730232a395642904-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="智者 利益 名利 朱泥" src="https://img3.secretchina.com/pic/2020/6-29/p2721332a113681419-ss.jpg"/>
   <br>
-   <strong>
-    无知
-   </strong>
-   者
-   <strong>
-    无畏
-   </strong>
-   。（图片来源：Adobestock）
+   智者6不贪。（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -28,58 +21,47 @@
 
 ---
 
-#### [ 🎬  《红墙的记忆》- 4.25中南海万人和平上访纪实](http://141.164.39.94:10000/videos/legend/425.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  《永恒的五十分钟》（长春电视插播事件改编） ](http://141.164.39.94:10000/videos/news/ComingForYou-2.html)
-
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### [ 💥 李锐评习近平：没想到文化程度这么低（李锐是毛泽东秘书、习仲勋挚友、前中组部副部长）](http://141.164.39.94:10000/videos/res/Communist/lirui-xi.html)
-
-#### [ 💥 江泽民失态怒斥并威胁香港记者（ “图样图森破”，“谈笑风生” ）](http://141.164.39.94:10000/videos/res/realjzm/naive.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  有些事情，在不清楚它到底有多难时，我们往往能够做得更好，这就是人们常说的
-  <span href="https://www.secretchina.com/news/gb/tag/无知" target="_blank">
-   无知
-  </span>
-  者无畏。
+  不知大家有没有听过这个故事：有位年轻人带着一袋铜钱坐船过河。船到河中间的时候，一个大浪把船打翻了。船上乘客慌张地往岸边游，也有人抱着木板，使劲往岸边划。只见乘客陆续上岸，但年轻人边挣扎边下沉，岸边的人劝他放弃那一袋铜钱，但他因为不愿意松手，最后力竭葬身在河底。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  1796年的一天，
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwifq63M3MXqAhXxKKYKHfJWAJMQmhMwIHoECA0QAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E5%25BE%25B7%25E5%259B%25BD&amp;usg=AOvVaw0JOmCFGtotSm9Q6Ulxx9O4">
-   德国
+  很多人认为年轻人很愚蠢，为了一点钱丢了生命。可是认真想一想，我们有多少人其实和那个年轻人并无二致，只是还没遇到船难而已。
+  <span href="https://www.secretchina.com/news/gb/tag/利益" target="_blank">
+   利益
   </span>
-  哥廷根大学，一个19岁的青年吃完晚饭，开始做导师单独安排给他的每天例行的3道
+  就像鱼饵一样，总是很吸引人。如果我们能做到无欲无求，那么就不会活得那么累，不会被利益控制了。
+ </p>
+ <p>
+  真正有智慧的
+  <span href="https://www.secretchina.com/news/gb/tag/智者" target="_blank">
+   智者
+  </span>
+  ，知道人生有“6不贪”，凡事“适可而止”，这样才能拥有更自在的生活。
+ </p>
+ <p>
   <strong>
-   数学
+   1
   </strong>
-  题。
+  <strong>
+   、烟酒
+  </strong>
  </p>
  <p>
-  青年很有
-  <span href="https://www.secretchina.com/news/gb/tag/数学" target="_blank">
-   数学
-  </span>
-  天赋，因此，导师对他寄予厚望，每天多给他安排2道较难的数学题作为训练。正常情况下，青年总是在2个小时内完成这项特殊作业。
+  有人觉得抽烟喝酒，是一件快乐的事情，也是人际交往的必需品。但人到了一定年纪之后，抽烟喝酒对健康的损害会越来越明显。
  </p>
  <p>
-  “咦，怎么今天导师给我多安排了一道？”青年一边打开写着题目的纸，一边嘟哝着。他也没有多想，就做了起来。
- </p>
- <p>
-  像往常一样，前2道题目在2个小时内顺利地完成了。第三道题写在一张小纸条上，是要求只用圆规和一把没有刻度的直尺作出正17边形。
- </p>
- <p>
-  青年没有在意，像做前两道题一样开始做起来。然而，做着做着，青年感到越来越吃力。开始，他还想，也许导师见我每天的题目都做得很顺利，这次特意给我增加难度吧。但是，随着时间一分一秒地过去了，第三道题竟毫无进展。青年绞尽脑汁，也想不出现有的数学知识对解开这道题有什么帮助。
+  因此聪明的人，不会贪图“烟酒”的享受，也会避免去那些场合，爱惜自己身体。不会因为贪图一时的欢娱，而毁掉了后半生的健康。健康是人生最大的财富，拥有健康，才能安度晚年。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -94,7 +76,15 @@
   </div>
  </center>
  <p>
-  困难激起了青年的斗志：我一定要把它做出来！他拿起圆规和直尺，在纸上画着，尝试着用一些超常规的思路去解这道题……
+  <strong>
+   2
+  </strong>
+  <strong>
+   、
+   <span href="https://www.secretchina.com/news/gb/tag/名利" target="_blank">
+    名利
+   </span>
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -109,7 +99,7 @@
   </div>
  </center>
  <p>
-  终于，当窗口露出一丝曙光时，青年长舒了一口气，他终于做出了这道难题！
+  贪图名利，是人最大的忌讳。一个有钱有势的人，若被欲望控制，人生也不会幸福。因为他们会为了追求更多名利，做一些见不得人的勾当，从中获利。或许钱财越来越多，但日子反会过得战战兢兢，一旦事情暴露，肯定会有牢狱之灾。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -124,7 +114,7 @@
   </div>
  </center>
  <p>
-  见到导师时，青年感到有些内疚和自责。他对导师说：“您给我安排的第三道题我做了整整一个通宵，我辜负了您对我的栽培……”
+  智者则不会执著名利，他们的生活随缘不强求，因此生活不为名利所役，悠游自在。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -139,9 +129,9 @@
   </div>
  </center>
  <p style="text-align: center;">
-  <img alt="卡尔・弗里德里希・高斯的画像." src="https://img3.secretchina.com/pic/2020/7-8/p2727481a111433736-ss.jpg" style="height:404px; width:499px"/>
+  <img alt="智者不会执著名利，生活不为名利所役，悠游自在。" src="https://img3.secretchina.com/pic/2020/6-27/p2719831a155673612-ss.jpg"/>
   <br>
-   卡尔．弗里德里希．高斯的画像，由Christian Albrecht Jensen创作（图片来源：维基百科）
+   智者不会执著名利，生活不为名利所役，悠游自在。（图片来源：Adobestock）
   </br>
  </p>
  <center>
@@ -157,7 +147,12 @@
   </div>
  </center>
  <p>
-  导师接过青年的作业一看，当即惊呆了。
+  <strong>
+   3
+  </strong>
+  <strong>
+   、口舌
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -172,7 +167,7 @@
   </div>
  </center>
  <p>
-  他用颤抖的声音对青年说：“这真是你自己做出来的？”
+  这里的口舌，除了美食之外，也有修口的意思。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -187,7 +182,27 @@
   </div>
  </center>
  <p>
-  青年有些疑惑地看着激动不已的导师，回答道：“当然，但是，我很笨，竟然花了整整一个通宵才做出来。”
+  有些人总是追逐美食，虽然餐餐满足了自己的口腹之欲，到头来却伤了自己的身体，得不偿失。而另一种口舌则是不修口，一出口就充满了是非八卦，伤人的同时，也招人怨恨，损了自己的福报。或是话说的很满，大有搞定一切的气势，但到头来事情却做得七零八落，让人无法信任。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   4
+  </strong>
+  <strong>
+   、热闹
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -206,7 +221,7 @@
   </ins>
  </center>
  <p>
-  导师请青年坐下，取出圆规和直尺，在书桌上铺开纸，叫青年当着他的面做一个正17边形。
+  有些人就是不甘寂寞，喜欢拉帮结伙。甚至为了自己的前途，拚命巴结其他人，只求一人得道，鸡犬升天。其实朋友还是要慎选的，好的朋友常往来，坏的朋友则要保持距离，人生还是靠自己最好。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -221,45 +236,12 @@
   </div>
  </center>
  <p>
-  青年很快地做出了一个正17边形。导师激动地对青年说：“你知不知道，你解开了一道有两千多年历史的数学悬案？阿基米德没有解出来，牛顿也没有解出来，你竟然一个晚上就解出来了！你真是天才！我最近正在研究这道难题，昨天给你安排题目时，不小心把写有这个题目的小纸条夹在了给你的题目里。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  多年以后，这个青年回忆起这一幕时，总是说：“如果有人告诉我，这是一道有两千多年历史的数学难题，我不可能在一个晚上解决它。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这个青年就是有“数学王子”美誉的
   <strong>
-   高斯
+   5
   </strong>
-  。约翰．卡尔．弗里德里希．高斯，是德国数学家、物理学家、天文学家、大地测量学家，生于布伦瑞克，卒于哥廷根，享年77岁。
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwitqr_u3MXqAhXqyYsBHd9SBlsQmhMwFnoECAsQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E5%258D%25A1%25E7%2588%25BE%25C2%25B7%25E5%25BC%2597%25E9%2587%258C%25E5%25BE%25B7%25E9%2587%258C%25E5%25B8%258C%25C2%25B7%25E9%25AB%2598%25E6%2596%25AF&amp;usg=AOvVaw02-vE8nBPqz-BPRUgRbZb5">
-   高斯
-  </span>
-  被认为是历史上最重要的数学家之一。
+  <strong>
+   、负面思维
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -274,11 +256,7 @@
   </div>
  </center>
  <p>
-  有些事情，在不清楚它到底有多难时，我们往往能够做得更好，这就是人们常说的无知者
-  <span href="https://www.secretchina.com/news/gb/tag/无畏" target="_blank">
-   无畏
-  </span>
-  。
+  一个人做一件善事，不是难事，但要能一辈子做善事，才是难事。因为很多人容易带有负面思维，这种念头不但会伤害到别人，也会伤害自己。尤其当我们以负面思维行事时，通常不会有什么好结果，万一因此伤害别人，早晚也会得到报应。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -292,7 +270,57 @@
    </center>
   </div>
  </center>
- <p style=" margin-bottom: 8px; ">
+ <p>
+  <strong>
+   6
+  </strong>
+  <strong>
+   、虚荣
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  生活与职场中，总不乏爱慕虚荣的人，这些人说话不真诚，做事不踏实。以阿谀奉承为乐，没事就喜欢炫耀自己，打肿脸充胖子，只为了满足自己的虚荣心。这样的人，通常嫉妒心也重，见不得人好。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  只要是智者，都懂得避开这6件事，绝不会去贪图，而是反过来踏实做事，不好高骛远。这样的人生，也才福气满满。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
@@ -309,6 +337,11 @@
   </span>
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
+   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+   </span>
+  </center>
+  <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
     </div>
@@ -322,7 +355,7 @@
   </center>
   <center>
    <div>
-    <div id="txt-mid2-t22-2017" style="display: block;  max-height: 351px;  overflow: hidden;">
+    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
      <div id="SC-21xx">
      </div>
      <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
@@ -337,13 +370,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/938994.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/938994.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/938994.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/07/12/938994.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/952290.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/952290.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/952290.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/12/952290.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/938994.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/952290.md' width='0px' height='0px'/>
